--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-spring.application.name=hostal
-server.port=8080
-spring.output.ansi.enabled=always
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
+spring.output.ansi.enabled=${SPRING_OUTPUT_ANSI_ENABLED}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hostel_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DB_DRIVER}
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO}
+spring.jpa.show-sql=${JPA_SHOW_SQL}
+spring.jpa.properties.hibernate.format_sql=${JPA_FORMAT_SQL}
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+security.jwt.key.private=${JWT_PRIVATE_KEY}
+security.jwt.user.generator=${JWT_USER_GENERATOR}
